add path of images,css,js

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 	var width,height,center_width,center_height,buttonElements,contentsElements,myLatlng,map,marker;
 	var url=[];
-	url[0] = 'Untitled-1_03.gif';
-	url[1] = 'flower-back0625.jpg';
-	url[2] = 'flower-back1071.jpg';
+	url[0] = '/img/Untitled-1_03.gif';
+	url[1] = '/img/flower-back0625.jpg';
+	url[2] = '/img/flower-back1071.jpg';
 
 	$(function(){
 
