change path of css,js,img

--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
 <title>菜々竈</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
-<link rel="stylesheet" href="style.css" media="all">
-<link rel="stylesheet" href="bootstrap.css" media="all">
+<link rel="stylesheet" href="css/style.css" media="all">
+<link rel="stylesheet" href="css/bootstrap.css" media="all">
 <script
 	src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script
 	src="http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
 <script
 	src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.5.3/modernizr.min.js"></script>
-<script src="bootstrap.js"></script>
+<script src="js/bootstrap.js"></script>
 <script type="text/javascript"
 	src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script>
 
 	var width,height,center_width,center_height,buttonElements,contentsElements,myLatlng,map,marker;
 	var url=[];
-	url[0] = '/img/Untitled-1_03.gif';
-	url[1] = '/img/flower-back0625.jpg';
-	url[2] = '/img/flower-back1071.jpg';
+	url[0] = 'img/Untitled-1_03.gif';
+	url[1] = 'img/flower-back0625.jpg';
+	url[2] = 'img/flower-back1071.jpg';
 
 	$(function(){
 
