--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="description" content="">
 <link rel="stylesheet" href="css/style.css" media="all">
 <link rel="stylesheet" href="css/bootstrap.css" media="all">
-<link href='http://fonts.googleapis.com/css?family=Monofett' rel='stylesheet' type='text/css'><link href='http://fonts.googleapis.com/css?family=Delius+Swash+Caps|Delius+Unicase' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Averia+Gruesa+Libre' rel='stylesheet' type='text/css'>
 <script
 	src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script
@@ -24,7 +24,8 @@
 	url[0] = 'img/Untitled-1_03.gif';
 	url[1] = 'img/flower-back0625.jpg';
 	url[2] = 'img/flower-back1071.jpg';
-
+	url[3] = 'img/IMG_1322.jpg';
+	url[4] = 'img/IMG_1317.JPG';
 	$(function(){
 
 
