--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 						<h1><span class="glyphicon glyphicon-map-marker"></span> Access</h1>
 						<h2></h2>
 						<h5>
-							〒 550-0012 大阪府大阪市大阪市西区立売堀4-4-23 2F 4-4-23 2F<br><br>
+							〒 550-0012 大阪府大阪市大阪市西区立売堀4-4-23 2F<br><br>
 							<span class="glyphicon glyphicon-earphone"></span> 06-6556-9585
 						</h5>
 						<br>
