Changed icon, deleted h1 tags
Changed icon, deleted h1 tags

--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
 			$('.menu-link').trigger('click');
 		});
 		
+		$("#background").click(function() {
+			$('.menu-link').trigger('click');
+		};
+		
 		$('#facebookMenu').attr("target","_blank");
 
 		$('#facebookMenu').click(function() {
@@ -165,13 +169,13 @@
 	<nav id="slideMenu" class="panel" role="navigation">
 	    <ul>
 	        <li><div id="conceptMenu"><span class="glyphicon glyphicon-leaf"></span> Concept</div></li>
-	        <li><div id="menuMenu"><span class="glyphicon glyphicon-align-justify"></span> Menu</div></li>
+	        <li><div id="menuMenu"><span class="glyphicon glyphicon-book"></span> Menu</div></li>
 	        <li><div id="accessMenu"><span class="glyphicon glyphicon-map-marker"></span> Access</div></li>
 	        <li><div id="facebookMenu">Facebook Page <span class="glyphicon glyphicon-new-window"></div></li>
 	    </ul>
 	</nav>
 	<div id="background" class="wrap push background">
-		<a href="#menu" class="menu-link"><span class="glyphicon glyphicon-align-justify"></a>
+		<a href="#menu" class="menu-link"><span class="glyphicon glyphicon-book"></a>
 		<div id="logo" class="logo"></div>
 		<div id="left_flower" class="left_flower">
 			<div class="title">Facebook Page <span class="glyphicon glyphicon-new-window"></span></div>
@@ -183,16 +187,16 @@
 			<div class="title"><span class="glyphicon glyphicon-leaf"></span> Concept</div>
 		</div>
 		<div id="name_na" class="name_na">
-			<div class="title">News</div>
+			<div class="title"></div>
 		</div>
 		<div id="name_nana" class="name_nana">
-			<div class="title">Menu3</div>
+			<div class="title"></div>
 		</div>
 		<div id="name_kamado" class="name_kamado">
-			<div class="title">Menu4</div>
+			<div class="title"></div>
 		</div>
 		<div id="vegetable" class="vegetable">
-			<div class="title"><span class="glyphicon glyphicon-align-justify"></span> Menu</div>
+			<div class="title"><span class="glyphicon glyphicon-book"></span> Menu</div>
 		</div>
 	<div id="shadow" class="shadow"></div>
 	<div id="front" class="front">
@@ -218,21 +222,21 @@
 					<br><br><br><br><br><br><br><br><br><br><br><br><br>
 				</div>
 				<div id="menu">
-					<h1><span class="glyphicon glyphicon-align-justify"></span> Menu<h1>
+					<h1><span class="glyphicon glyphicon-book"></span> Menu<h1>
 					<br>
 					<img src="img/menu.jpg" alt="menu" class="img-rounded menu">
 					<br><br><br><br><br><br><br><br><br><br><br><br><br>
 				</div>
 				<div id="news">
-					<h1>News<h1>
+					<h1><h1>
 					<br><br><br><br><br><br><br><br><br><br><br><br><br>
 				</div>
 				<div id="menu3">
-					<h1>Menu3<h1>
+					<h1><h1>
 					<br><br><br><br><br><br><br><br><br><br><br><br><br>
 				</div>
 				<div id="menu4">
-					<h1>Menu4<h1>
+					<h1><h1>
 					<br><br><br><br><br><br><br><br><br><br><br><br><br>
 				</div>
 			</div>
