--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
 		//buttonElements = "#left_flower,#right_flower,#nanakamado,#name_na,#name_nana,#name_kamado,#vegetable";
 		//displayContentsElements = "#right_flower,#nanakamado,#name_na,#name_nana,#name_kamado,#vegetable";
-		buttonElements = "#left_flower,#right_flower,#nanakamado,#vegetable";
-		displayContentsElements = "#right_flower,#nanakamado,#vegetable,#conceptMenu,#accessMenu,#menuMenu";
+		buttonElements = "#left_flower,#right_flower,#nanakamado,#vegetable,#name_na";
+		displayContentsElements = "#right_flower,#nanakamado,#name_na,#vegetable,#conceptMenu,#accessMenu,#menuMenu,#newsMenu";
 		
 		mainContents = "#access,#concept,#menu,#news,#menu3,#menu4";
 		//mainContents = "#access,#concept,#menu";
@@ -40,17 +40,17 @@
 		//$(contentsElements).hide().fadeOut(0);
 		//$(mainContents).hide().fadeOut(0);
 
+		controlWindowSize();
+
+		$(window).on('orientationchange', function(){
+			controlWindowSize();
+		});
+		
+		$(".menu-link").fadeIn(3000);
+		$('.menu-link').bigSlide();
+
 		$(".background").hide().fadeIn(500);
 		$(".logo").hide().fadeIn(3000);
-		
-		if ((navigator.userAgent.indexOf('iPhone') > 0 
-			&& navigator.userAgent.indexOf('iPad') == -1) 
-			|| navigator.userAgent.indexOf('iPod') > 0 
-			|| navigator.userAgent.indexOf('Android') > 0) {
-		    $(".menu-link").fadeIn(3000);
-		}
-
-		$('.menu-link').bigSlide();
 
 		buttonPositionChange();
 
@@ -89,11 +89,11 @@
 		$('#vegetable').click(function() {
 			$("#menu").fadeIn(500);
 		});
-		/*
+		
 		$('#name_na').click(function() {
 			$("#news").fadeIn(500);
 		});
-		
+		/*
 		$('#name_nana').click(function() {
 			$("#menu3").fadeIn(500);
 		});
@@ -106,7 +106,6 @@
 		});
 
 		$(displayContentsElements).click(function(){
-
 			$(contentsElements).fadeIn(500);
 		})
 		//////
@@ -124,10 +123,11 @@
 			$("#access").fadeIn(500);
 			$('.menu-link').trigger('click');
 		});
-		
-		$("#background").click(function() {
+
+		$('#newsMenu').click(function() {
+			$("#news").fadeIn(500);
 			$('.menu-link').trigger('click');
-		};
+		});
 		
 		$('#facebookMenu').attr("target","_blank");
 
@@ -142,7 +142,20 @@
 
 		var n = Math.floor(Math.random() * url.length);
 		$('#background,#contents').css('background-image', 'url(' + url[n] + ')');
-		$('#background,#contents').css('background-size', 'cover');		
+		$('#background,#contents').css('background-size', 'cover');	
+
+		function controlWindowSize() {
+			$('meta[name=viewport]').remove();
+			if ((navigator.userAgent.indexOf('iPhone') > 0
+			      && navigator.userAgent.indexOf('iPad') == -1)
+			      || navigator.userAgent.indexOf('iPod') > 0
+			      || (navigator.userAgent.indexOf('Android') > 0
+			      && navigator.userAgent.indexOf('Mobile') > 0)) {
+			  if ( $(window).height()>$(window).width() ){
+			      $('head').append('<meta name="viewport" content="width=750px">')
+			  }
+			}
+		}	
 
 		function buttonPositionChange() {
 			width = $(window).width();
@@ -162,6 +175,27 @@
 			$('#vegetable').css({top:center_height+75,left:center_width-72.5});
 			$('#map').css({width:map_width});
 		}
+
+		var formatData = function(date) {
+			var d = new Date(date);
+			return (d.getFullYear() + '.' + (d.getMonth() + 1) + '.' + d.getDate());
+		};
+
+		$.getJSON(
+			'http://ajax.googleapis.com/ajax/services/feed/load?callback=?',
+			{
+				q:'http://www.facebook.com/feeds/page.php?id=449462391846481&format=rss20',
+				v:'1.0',
+				num:20
+			},
+			function (data) {
+				$.each(data.responseData.feed.entries, function(i, item){
+				$('#facebook').append('<li><p class="fb_comm" style="background-color:#ffffff;padding:20px;"><span class="fb_date">'+
+				formatData(item.publishedDate)
+				+'</span>' + item.content + '</p></li>');
+				});
+			}
+		);
 	});
 </script>
 </head>
@@ -169,13 +203,14 @@
 	<nav id="slideMenu" class="panel" role="navigation">
 	    <ul>
 	        <li><div id="conceptMenu"><span class="glyphicon glyphicon-leaf"></span> Concept</div></li>
+	        <li><div id="newsMenu"><span class="glyphicon glyphicon-info-sign"></span> News</div></li>
 	        <li><div id="menuMenu"><span class="glyphicon glyphicon-book"></span> Menu</div></li>
 	        <li><div id="accessMenu"><span class="glyphicon glyphicon-map-marker"></span> Access</div></li>
 	        <li><div id="facebookMenu">Facebook Page <span class="glyphicon glyphicon-new-window"></div></li>
 	    </ul>
 	</nav>
 	<div id="background" class="wrap push background">
-		<a href="#menu" class="menu-link"><span class="glyphicon glyphicon-book"></a>
+		<a href="#menu" class="menu-link"><span class="glyphicon glyphicon-align-justify"></a>
 		<div id="logo" class="logo"></div>
 		<div id="left_flower" class="left_flower">
 			<div class="title">Facebook Page <span class="glyphicon glyphicon-new-window"></span></div>
@@ -187,7 +222,7 @@
 			<div class="title"><span class="glyphicon glyphicon-leaf"></span> Concept</div>
 		</div>
 		<div id="name_na" class="name_na">
-			<div class="title"></div>
+			<div class="title"><span class="glyphicon glyphicon-info-sign"></span> News</div>
 		</div>
 		<div id="name_nana" class="name_nana">
 			<div class="title"></div>
@@ -222,14 +257,18 @@
 					<br><br><br><br><br><br><br><br><br><br><br><br><br>
 				</div>
 				<div id="menu">
-					<h1><span class="glyphicon glyphicon-book"></span> Menu<h1>
+					<h1><span class="glyphicon glyphicon-book"></span> Menu</h1>
 					<br>
 					<img src="img/menu.jpg" alt="menu" class="img-rounded menu">
 					<br><br><br><br><br><br><br><br><br><br><br><br><br>
 				</div>
 				<div id="news">
-					<h1><h1>
-					<br><br><br><br><br><br><br><br><br><br><br><br><br>
+					<h1><span class="glyphicon glyphicon-info-sign"></span> News</h1>
+					<dl id="info">
+					  <dd>
+					    <ul id="facebook"></ul>
+					  </dd>
+					</dl>
 				</div>
 				<div id="menu3">
 					<h1><h1>
